# mCal2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: settings.ini
client/: CMakeLists.txt
client/src/: calendarrepository.cpp  calendarrepository.h  clientconfig.h  clientconifg.cpp  log.h  main.cpp
client/src/GUI/: dayscheduleview.h  entrydetailsview.cpp  entrydetailsview.h  guihelper.cpp  mainwindow.cpp  mainwindow.h  newentryview.cpp  newentryview.h  newtimeblockview.cpp  newtimeblockview.h  overviewview.cpp  overviewview.h  settingsview.cpp  todolistview.cpp
client/src/GUI/widgets/: habitbarwidget.h  habitprogresswidget.h  schedulewidget.cpp
client/src/data/: task.cpp  task.h  timeblock.cpp  timeblock.h  uuid.h
client/src/database/: database.cpp  database.h  habit.h  syncronize.cpp  syncronize.h  task_db.h
server/: auth.py  database.py  main.py  models.py  requirements.txt  schema.sql  sync.py
src/: DLL.h  calendarrepository.cpp  calendarrepository.h  defs.h  log.h  main.cpp  tasklist.h
src/.old/: DLL.cpp  DLL.h
src/CLI/: CLI.c
src/GUI/: dayscheduleview.cpp  dayscheduleview.h  entrydetailsview.cpp  entrydetailsview.h  guihelper.cpp  guihelper.h  helper.cpp  mainwindow.cpp  mainwindow.h  newentryview.cpp  newentryview.h  overviewview.cpp  overviewview.h  settingsview.cpp  settingsview.h  taskitemwidget.cpp  taskitemwidget.h  todolistview.cpp  todolistview.h
src/GUI/widgets/: habitbarwidget.cpp  habitprogresswidget.cpp  schedulewidget.h  taskitemwidget.cpp  taskitemwidget.h
src/data/: goalspec.h  task.cpp  task.h  tasklist.cpp  tasklist.h  timeblock.cpp  timeblock.h  uuid.h
src/database/: database.c  database.cpp  database.h  habit.h  syncronize.h  task.h  task_db.h  timeblock.c  timeblock.h
tests/: CMakeLists.txt  utils.sh
tests/integration/: CMakeLists.txt  run_sync_test.py
tests/server_basic_sync/: CMakeLists.txt  basic_sync.sh  payload.json  test.sh  validate_db.sh
